[package]
name = "rambo"
version = "0.1.0"
authors = ["Haibo Yan <tristan.yim@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
colored = "2.0.0"

[[bin]]
name = "rambo"
path = "src/main.rs"

[[bin]]
name = "concat"
path = "src/concat/concat.rs"

[[bin]]
name = "format"
path = "src/format/format.rs"

[[bin]]
name = "guess"
path = "src/guess/guess.rs"